[gd_scene load_steps=4 format=3 uid="uid://qon4hdpj04mo"]

[ext_resource type="PackedScene" uid="uid://cf8py46vfqbf4" path="res://addons/texture_fonts/UI/Components/Vector2Edit.tscn" id="1"]
[ext_resource type="Script" path="res://addons/texture_fonts/UI/Components/CharSetting.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jy3j1"]
draw_center = false
border_width_top = 15
border_color = Color(0, 0.192157, 0.447059, 0.164706)
border_blend = true

[node name="CharSetting" type="VBoxContainer" node_paths=PackedStringArray("char_edit", "advance", "offset")]
anchors_preset = -1
anchor_right = 0.326172
anchor_bottom = 0.117
offset_bottom = -40.1998
script = ExtResource("2")
char_edit = NodePath("Margin/HBox/ForCharContainer/Char")
advance = NodePath("Margin/HBox/AdvanceContainer/AdvanceEdit")
offset = NodePath("Margin/HBox/OffsetEdit")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_jy3j1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ForCharContainer" type="VBoxContainer" parent="Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Margin/HBox/ForCharContainer"]
layout_mode = 2
text = "For..."

[node name="Char" type="LineEdit" parent="Margin/HBox/ForCharContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
placeholder_text = "character(s)"
caret_blink = true
caret_blink_interval = 0.5

[node name="AdvanceContainer" type="VBoxContainer" parent="Margin/HBox"]
layout_mode = 2

[node name="Heading" type="HBoxContainer" parent="Margin/HBox/AdvanceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Margin/HBox/AdvanceContainer/Heading"]
layout_mode = 2
text = "Advance"

[node name="HSeparator" type="HSeparator" parent="Margin/HBox/AdvanceContainer/Heading"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdvanceEdit" type="SpinBox" parent="Margin/HBox/AdvanceContainer"]
layout_mode = 2
min_value = -100.0

[node name="OffsetEdit" parent="Margin/HBox" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 3
min_value = Vector2(-4096, -4096)
max_value = Vector2(4096, 4096)
label = "Offset"

[node name="DeleteButton" type="Button" parent="Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Delete"

[connection signal="text_changed" from="Margin/HBox/ForCharContainer/Char" to="." method="_on_Char_text_changed"]
[connection signal="value_changed" from="Margin/HBox/AdvanceContainer/AdvanceEdit" to="." method="_on_AdvanceEdit_value_changed"]
[connection signal="value_changed" from="Margin/HBox/OffsetEdit" to="." method="_on_OffsetEdit_value_changed"]
[connection signal="pressed" from="Margin/HBox/DeleteButton" to="." method="_on_DeleteButton_pressed"]
